:bug::fire: Collapsable menu's bug fixed

--- a/Bootstrap_LoopLab/index.html
+++ b/Bootstrap_LoopLab/index.html
@@ -27,7 +27,7 @@
         <button
           class="navbar-toggler"
           data-toggle="collapse"
-          data-targer="#navbarCollapse"
+          data-target="#navbarCollapse"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
