--- a/Bootstrap_LoopLab/index.html
+++ b/Bootstrap_LoopLab/index.html
@@ -21,9 +21,12 @@
   </head>
 
   <body data-spy="scroll" data-target="#main-nav" id="home">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav
+      class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
+      id="main-nav"
+    >
       <div class="container">
-        <a href="index.html" class="navbar-brand">LoopLab</a>
+        <a href="index.html" class="navbar-brand">LoopLAB</a>
         <button
           class="navbar-toggler"
           data-toggle="collapse"
@@ -56,7 +59,6 @@
         <div class="home-inner container">
           <div class="row">
             <div class="col-lg-8 d-none d-lg-block">
-              <!-- ^^ d-none makes it not show up on anything smaller than lg-->
               <h1 class="display-4">
                 Build <strong>social profiles</strong> and gain revenue
                 <strong>profits</strong>
@@ -66,8 +68,8 @@
                   <i class="fas fa-check fa-2x"></i>
                 </div>
                 <div class="p-4 align-self-end">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maiores magni non in? Tempore, esse eius?
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed,
+                  tempore iusto in minima facere dolorem!
                 </div>
               </div>
 
@@ -76,8 +78,8 @@
                   <i class="fas fa-check fa-2x"></i>
                 </div>
                 <div class="p-4 align-self-end">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maiores magni non in? Tempore, esse eius?
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed,
+                  tempore iusto in minima facere dolorem!
                 </div>
               </div>
 
@@ -86,8 +88,8 @@
                   <i class="fas fa-check fa-2x"></i>
                 </div>
                 <div class="p-4 align-self-end">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maiores magni non in? Tempore, esse eius?
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed,
+                  tempore iusto in minima facere dolorem!
                 </div>
               </div>
             </div>
@@ -139,6 +141,66 @@
         </div>
       </div>
     </header>
+
+    <!-- EXPLORE HEAD -->
+    <section id="explore-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Explore</h1>
+            <p class="lead">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe
+              eligendi ab unde quia voluptatibus obcaecati iusto sequi quas,
+              temporibus itaque?
+            </p>
+            <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Explore Section -->
+    <section id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              class="img-fluid mb-3 rounded-circle"
+              src="img/explore-section1.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="col-md-6">
+            <h3>Explore & Connect</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus, necessitatibus aperiam. Doloremque sunt minima iusto
+              numquam at nemo earum nostrum?
+            </p>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+                eum dolorum corporis optio quam quis?
+              </div>
+            </div>
+
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+                eum dolorum corporis optio quam quis?
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
