--- a/Bootstrap_LoopLab/index.html
+++ b/Bootstrap_LoopLab/index.html
@@ -159,7 +159,7 @@
       </div>
     </section>
 
-    <!-- Explore Section -->
+    <!-- Explore SECTION -->
     <section id="explore-section" class="bg-light text-muted py-5">
       <div class="container">
         <div class="row">
@@ -219,7 +219,7 @@
       </div>
     </section>
 
-    <!-- CREATE Section -->
+    <!-- CREATE SECTION -->
     <section id="create-section" class="py-5">
       <div class="container">
         <div class="row">
@@ -233,6 +233,66 @@
 
           <div class="col-md-6 order-1">
             <h3>Create Your Passion</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus, necessitatibus aperiam. Doloremque sunt minima iusto
+              numquam at nemo earum nostrum?
+            </p>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+                eum dolorum corporis optio quam quis?
+              </div>
+            </div>
+
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+                eum dolorum corporis optio quam quis?
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE HEAD -->
+    <section id="share-head-section" class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Share</h1>
+            <p class="lead">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe
+              eligendi ab unde quia voluptatibus obcaecati iusto sequi quas,
+              temporibus itaque?
+            </p>
+            <a href="#" class="btn btn-outline-light">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE SECTION -->
+    <section id="share-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              class="img-fluid mb-3 rounded-circle"
+              src="img/share-section1.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="col-md-6">
+            <h3>Share What You Create</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Repellendus, necessitatibus aperiam. Doloremque sunt minima iusto
