--- a/Bootstrap_Mizuxe/index.html
+++ b/Bootstrap_Mizuxe/index.html
@@ -163,6 +163,105 @@
       </div>
     </section>
 
+    <!-- ABOUT / WHY SECTION-->
+    <section id="about" class="py-5 text-center bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header mb-5">
+              <h1 class="text-custom-primary pb-3">
+                Why This Book?
+              </h1>
+              <p class="lead pb-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                totam similique magnam? Earum, nobis explicabo.
+              </p>
+            </div>
+
+            <!-- ACCORDION -->
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse1"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                    </div>
+                  </h5>
+                </div>
+                <div id="collapse1" class="collapse show">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Cum fugiat amet assumenda numquam inventore esse ullam odit
+                    laborum cupiditate debitis nesciunt aliquam, sequi in
+                    corrupti ipsa, odio illum, cumque ut. Illum autem adipisci
+                    repudiandae excepturi tempore nostrum nam corrupti deleniti,
+                    reiciendis quae quibusdam ipsum natus praesentium tempora
+                    alias ratione quis!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse2"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Gain The
+                      Knowledge
+                    </div>
+                  </h5>
+                </div>
+                <div id="collapse2" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Cum fugiat amet assumenda numquam inventore esse ullam odit
+                    laborum cupiditate debitis nesciunt aliquam, sequi in
+                    corrupti ipsa, odio illum, cumque ut. Illum autem adipisci
+                    repudiandae excepturi tempore nostrum nam corrupti deleniti,
+                    reiciendis quae quibusdam ipsum natus praesentium tempora
+                    alias ratione quis!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div
+                    href="#collapse3"
+                    data-toggle="collapse"
+                    data-parent="#accordion"
+                  >
+                    <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse3" class="collapse">
+                <div class="card-body">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Cum fugiat amet assumenda numquam inventore esse ullam odit
+                  laborum cupiditate debitis nesciunt aliquam, sequi in
+                  corrupti ipsa, odio illum, cumque ut. Illum autem adipisci
+                  repudiandae excepturi tempore nostrum nam corrupti deleniti,
+                  reiciendis quae quibusdam ipsum natus praesentium tempora
+                  alias ratione quis!
+                </div>
+              </div>
+            </div>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
