--- a/Bootstrap_Mizuxe/index.html
+++ b/Bootstrap_Mizuxe/index.html
@@ -284,6 +284,34 @@
                 <div class="card-body">
                   <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
                   <h3>Susan Williams</h3>
+                  <h5 class="text-muted">Lead Writer</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quos cum maxime fugiat, aspernatur debitis?</p>
+                  <div class="d-flex justify-content-center">
+                    <div class="p-4">
+                      <a href="http://facebook.com">
+                      <i class="fab fa-facebook icon-custom"></i>
+                      </a>
+                    </div>
+                    <div class="p-4">
+                      <a href="http://twitter.com">
+                        <i class="fab fa-twitter icon-custom"></i>
+                      </a>
+                    </div>
+                    <div class="p-4">
+                      <a href="http://instagram.com">
+                        <i class="fab fa-instagram icon-custom"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6">
+              <div class="card">
+                <div class="card-body">
+                  <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                  <h3>Grace Smith</h3>
                   <h5 class="text-muted">Co-Writer</h5>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quos cum maxime fugiat, aspernatur debitis?</p>
                   <div class="d-flex justify-content-center">
@@ -340,7 +368,7 @@
               <div class="card">
                 <div class="card-body">
                   <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
-                  <h3>Kewin Swanson</h3>
+                  <h3>Kevin Swanson</h3>
                   <h5 class="text-muted">Designer</h5>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quos cum maxime fugiat, aspernatur debitis?</p>
                   <div class="d-flex justify-content-center">
