--- a/Bootstrap_Glozzom/index.html
+++ b/Bootstrap_Glozzom/index.html
@@ -120,6 +120,57 @@
       </div>
     </section>
 
+    <!-- HOME ICON SECTION -->
+    <section id="home-icons" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cog fa-3x mb-2"></i>
+            <h3>Turning Gears</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
+              deserunt?
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cloud fa-3x mb-2"></i>
+            <h3>Sending Data</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
+              deserunt?
+            </p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cart-plus fa-3x mb-2"></i>
+            <h3>Making Money</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
+              deserunt?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- HOME HEADING SECTION -->
+    <section id="home-heading" class="p-5">
+      <div class="dark-overlay">
+        <div class="row">
+          <div class="col">
+            <div class="container pt-5">
+              <h1>Are You Ready To Get Started?</h1>
+              <p class="d-none d-md-block">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolores aut asperiores voluptatum eum corporis delectus! Dolorum
+                deleniti ducimus nemo dignissimos.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
